Utilized CSS to make page responsive and fill out styles.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <script src="assets/javascript/game.js"></script>
     </head>
     <body>
-        <h1><span id="victoryCountSpan"></span></h1>
+        <header>
+            <h1><span id="victoryCountSpan"></span></h1>
+        </header>
         <img src="assets/images/galaxy.jpg" id="themeRewardSpan" />
         <div>
             <span id="wordSpan">Press Any Key to Begin</span>
