Updated several files, most notably implemented fix to javascript that prevents escape characters and such from affecting the guessed letters string.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </div>
         <footer>
             <span>All images taken from <a target="_blank" href="http://www.seasky.org/constellations/constellations.html">Sea & Sky</a></span>
+            <br>
+            <span><a href="">Return to Kieran's Portfolio</a></span>
         </footer>
     </body>
 </html>
